[package]
name = "cortex-m-asm"
authors = ["Adam Greig <adam@adamgreig.com>"]
version = "0.1.0"
categories = ["embedded", "hardware-support", "no-std"]
description = "ASM intrinsics for Cortex-M CPUs"
documentation = "https://docs.rs/cortex-m-asm"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/adamgreig/cortex-m-asm"
edition = "2018"

[dependencies]
nightly-crimes = "1.0.2"
